[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/battle_menu.gd" id="1_menu"]

[node name="BattleMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = 20.0
offset_top = 492.0
offset_right = 240.0
offset_bottom = 648.0

[node name="ActorName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 6.0
offset_right = 208.0
offset_bottom = 22.0
text = "ACTOR"

[node name="NameSeparator" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 8.0
offset_top = 25.0
offset_right = 212.0
offset_bottom = 26.0
color = Color(0.5, 0.5, 0.5, 0.35)

[node name="ActionList" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 12.0
offset_top = 32.0
offset_right = 208.0
offset_bottom = 148.0

[node name="DescriptionPanel" type="Panel" parent="."]
layout_mode = 0
offset_left = 250.0
offset_top = 492.0
offset_right = 570.0
offset_bottom = 648.0

[node name="Label" type="Label" parent="DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 8.0
offset_right = -10.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Action Description"
autowrap_mode = 2
